# folio

./: .gitignore  README.md  dates.py  etfs.py  folio.py  hist.py  model.py  pyproject.toml  risk.py  timing.py  utils.py
cache/: hist_data-aapl.parquet  hist_data-adbe.parquet  hist_data-amd.parquet  hist_data-amt.parquet  hist_data-amzn.parquet  hist_data-apo.parquet  hist_data-app.parquet  hist_data-bac.parquet  hist_data-be.parquet  hist_data-c.parquet  hist_data-cnm.parquet  hist_data-cor.parquet  hist_data-crcl.parquet  hist_data-crwv.parquet  hist_data-cwan.parquet  hist_data-ddog.parquet  hist_data-de.parquet  hist_data-factors.parquet  hist_data-fang.parquet  hist_data-fl.parquet  hist_data-goog.parquet  hist_data-gs.parquet  hist_data-ibm.parquet  hist_data-indices.parquet  hist_data-jpm.parquet  hist_data-meta.parquet  hist_data-mmm.parquet  hist_data-msft.parquet  hist_data-nvda.parquet  hist_data-nwl.parquet  hist_data-owl.parquet  hist_data-pg.parquet  hist_data-pld.parquet  hist_data-pltr.parquet  hist_data-pr.parquet  hist_data-rely.parquet  hist_data-shc.parquet  hist_data-tgls.parquet  hist_data-tmus.parquet  hist_data-xom.parquet
